src/test/test-models/bad/lang/good_const.stan
transformed data {
  real y;
  y = pi();
}
model {
}
